[gd_scene load_steps=12 format=3 uid="uid://ddg1hwbx1w5xl"]

[ext_resource type="Script" path="res://Kleo Game Scripts/Character.gd" id="1_igum2"]
[ext_resource type="PackedScene" uid="uid://c7ejmxrhcb08p" path="res://Kleo Game Scenes/new_revolver_good.tscn" id="2_t7emm"]
[ext_resource type="Texture2D" uid="uid://cyn03qprx6lvf" path="res://Kleo Game Sprites/crosshairs.png" id="3_ce5vw"]
[ext_resource type="PackedScene" uid="uid://b5ullklw3cyxk" path="res://Kleo Game Scenes/shotgun.tscn" id="3_xhexq"]
[ext_resource type="Shader" path="res://Olive Game Material Overrides/shaders/godot-psx-master/Shaders/psx_fade.gdshader" id="4_np53g"]
[ext_resource type="PackedScene" uid="uid://cdank381erh0u" path="res://Kleo Game Scenes/double_shotty.tscn" id="4_pyyou"]
[ext_resource type="Shader" path="res://Olive Game Material Overrides/shaders/godot-psx-master/Shaders/psx_dither.gdshader" id="6_s3jbn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rs0bt"]
shader = ExtResource("6_s3jbn")
shader_parameter/color_depth = 5
shader_parameter/dithering = true
shader_parameter/resolution_scale = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o24ja"]
shader = ExtResource("4_np53g")
shader_parameter/alpha = null
shader_parameter/fadeToWhite = false

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1812g"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v3ad5"]

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_igum2")

[node name="CameraRoot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.631373, 0)
current = true
fov = 100.0

[node name="plchld_revolver_better" parent="CameraRoot/Camera3D" instance=ExtResource("2_t7emm")]
transform = Transform3D(-0.15, 0, -2.26494e-08, 0, 0.15, 0, 2.26494e-08, 0, -0.15, 0.354512, -0.344, -0.411081)

[node name="new_shotgun" parent="CameraRoot/Camera3D" instance=ExtResource("3_xhexq")]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, 0.374086, -0.376776, -0.541138)
visible = false

[node name="double_shotty" parent="CameraRoot/Camera3D" instance=ExtResource("4_pyyou")]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, 0.374, -0.377, -0.541)
visible = false

[node name="RayCast3D" type="RayCast3D" parent="CameraRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.00394)
target_position = Vector3(0, 0, -100)
collide_with_areas = true
debug_shape_custom_color = Color(0.670588, 0, 0, 1)

[node name="RayCastEnd" type="Node3D" parent="CameraRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101.004)

[node name="CameraRoot2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraRoot2D"]

[node name="crosshair" type="Sprite2D" parent="CameraRoot2D/Camera2D"]
texture = ExtResource("3_ce5vw")
hframes = 2
vframes = 3

[node name="StaminaLabel" type="Label" parent="CameraRoot2D/Camera2D"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -550.0
offset_top = 273.0
offset_right = -412.0
offset_bottom = 299.0
grow_vertical = 0
text = "STAMINA:"

[node name="dither_cont" type="SubViewportContainer" parent="."]
visible = false
material = SubResource("ShaderMaterial_rs0bt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dither" type="SubViewport" parent="dither_cont"]
handle_input_locally = false
mesh_lod_threshold = 0.0
render_target_update_mode = 0

[node name="fade_cont" type="SubViewportContainer" parent="dither_cont/dither"]
visible = false
material = SubResource("ShaderMaterial_o24ja")
offset_right = 40.0
offset_bottom = 40.0

[node name="fade" type="SubViewport" parent="dither_cont/dither/fade_cont"]
handle_input_locally = false
render_target_update_mode = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1812g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_v3ad5")
